clipping fixed on syringe animation

--- a/main.css
+++ b/main.css
@@ -12,8 +12,8 @@
   height: 250px;
   width: 250px;
   z-index: -1;
-  -webkit-clip-path: polygon(60% 14%, 71% 24%, 82% 33%, 76% 45%, 63% 58%, 42% 75%, 30% 66%, 23% 56%, 42% 35%);
-  clip-path: polygon(60% 14%, 71% 24%, 82% 33%, 76% 45%, 63% 58%, 42% 75%, 30% 66%, 23% 56%, 42% 35%); 
+  -webkit-clip-path: polygon(64% 10%, 90% 33%, 78% 50%, 61% 67%, 42% 81%, 18% 60%, 36% 39%);
+  clip-path: polygon(64% 10%, 90% 33%, 78% 50%, 61% 67%, 42% 81%, 18% 60%, 36% 39%);
 }
 
 .syringe {
